/*
 * $Id: ChangeLog,v 1.1659 2003/11/05 13:41:39 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-11-05 22:40 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/codebloc.c
  * source/vm/estack.c
    ! Fixed detached locals implementation to be 100% Clipper compabtible with 1 exception which appears to be a bug in Clipper.

  + tests/detach.prg
    + New sample of Severed Detached Local, Clipper compatibility.

  + tests/detach1.prg
    + Sample of what appears to be a Clipper bug, in Detached Locals implementation [fixed in xHarbour].

2003-11-05 14:37 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/include/hbdefs.h
    ! HB_{PUT,GET}_LE_DOUBLE macros restored. I've forgot I used them
      in DBFFPT
  * xharbour/config/global.cf
    - removed DBFCDXOLD lib - this was only for my tests to compare
      new and old CDX RDD and should never be in CVS - sorry

2003-11-05 08:00 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  ! contrib/libct/Makefile.bc
    ! minor fix

2003-11-05 04:24 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/include/hbdefs.h
  * xharbour/include/hbrddcdx.h
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
  * xharbour/source/rdd/dbfcdx/dbfcdx1.h
    ! removed non ISO C standard construction which cannot be compiled
      by some compilers
    ! adding some missed casting to make BCC happy
    ! all internal function declared as static

2003-11-04 10:11 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rdd/dbfcdx/dbfcdx1.h
    - Removed redundant macro.
  * source/rdd/dbfcdx/dbfcdx1.c
    + Added missing void in function definition.

2003-11-04 09:57 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbdefs.h
  * include/hbrddcdx.h
  * source/rdd/dbfcdx/dbfcdx1.c
    ! Fixed compilation errors.
